--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: '3'
 services:
   web:
     build: .
@@ -8,5 +8,7 @@ services:
       - mongo
   mongo:
     image: mongo
+    volumes:
+      - database:/data/db
     ports:
       - '27017:27017'
